// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Stepper input matches snapshot (disabled) 1`] = `
.c2 {
  color: #1B1C1E;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.5rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-quarter);
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  color: #60666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-2x);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: var(--spacing-1x);
  width: var(--size-2x);
  border-radius: var(--border-radius) 0 0 var(--border-radius);
  z-index: 1;
}

.c4:hover:not(:disabled) {
  background-color: #DBDEE1;
}

.c4:disabled {
  background-color: #F1F2F2;
  border-color: #B7BBC2;
  color: #B7BBC2;
  cursor: not-allowed;
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

.c4:focus-visible {
  z-index: 3;
}

.c4 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  color: #60666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-2x);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: var(--spacing-1x);
  width: var(--size-2x);
  border-radius: 0 var(--border-radius) var(--border-radius) 0;
  z-index: 1;
}

.c6:hover:not(:disabled) {
  background-color: #DBDEE1;
}

.c6:disabled {
  background-color: #F1F2F2;
  border-color: #B7BBC2;
  color: #B7BBC2;
  cursor: not-allowed;
}

.c6:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

.c6:focus-visible {
  z-index: 3;
}

.c6 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  isolation: isolate;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
  width: auto;
}

.c5 {
  background-color: #FFFFFF;
  border-color: #60666E;
  box-sizing: border-box;
  color: #1B1C1E;
  font-family: inherit;
  font-size: 0.875rem;
  height: var(--size-2x);
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  outline: none;
  padding: 0 var(--spacing-1x);
  text-align: center;
  width: 3rem;
  z-index: 2;
  border-style: solid;
  border-width: 1px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  border-left: none;
  border-radius: 0;
  border-right: none;
}

.c5::-webkit-outer-spin-button,
.c5::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c5[type='number'] {
  -moz-appearance: textfield;
}

.c5:disabled {
  background-color: #F1F2F2;
  border-color: #B7BBC2;
  color: #B7BBC2;
}

.c5:-moz-read-only {
  background-color: rgb(0 0 0 / 0.03);
  border-color: transparent;
  color: #1B1C1E;
}

.c5:read-only {
  background-color: rgb(0 0 0 / 0.03);
  border-color: transparent;
  color: #1B1C1E;
}

.c5:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

<div
  class="c0"
>
  <label
    class="c1 c2"
    for="uuid1"
    id="uuid1_label"
  >
    test
  </label>
  <div
    aria-labelledby="uuid1_label"
    class="c3"
    role="group"
  >
    <button
      aria-label="Decrease number"
      class="c4"
      data-testid="stepper-button-decrement"
      disabled=""
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-minus"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
      </svg>
    </button>
    <input
      aria-invalid="false"
      class="c5"
      data-testid="stepper-input"
      disabled=""
      id="uuid1"
      type="number"
      value=""
    />
    <button
      aria-label="Increase number"
      class="c6"
      data-testid="stepper-button-increment"
      disabled=""
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-plus"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="M12 5v14"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Stepper input matches snapshot (invalid) 1`] = `
.c3 {
  color: #CD2C23;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
}

.c4 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: var(--spacing-base);
}

.c2 {
  color: #1B1C1E;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.5rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #CD2C23;
}

.c0 > :nth-child(2) {
  margin-bottom: var(--spacing-quarter);
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  color: #60666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-2x);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: var(--spacing-1x);
  width: var(--size-2x);
  border-radius: var(--border-radius) 0 0 var(--border-radius);
  z-index: 1;
}

.c6:hover:not(:disabled) {
  background-color: #DBDEE1;
}

.c6:disabled {
  background-color: #F1F2F2;
  border-color: #B7BBC2;
  color: #B7BBC2;
  cursor: not-allowed;
}

.c6:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

.c6:focus-visible {
  z-index: 3;
}

.c6 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  color: #60666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-2x);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: var(--spacing-1x);
  width: var(--size-2x);
  border-radius: 0 var(--border-radius) var(--border-radius) 0;
  z-index: 1;
}

.c8:hover:not(:disabled) {
  background-color: #DBDEE1;
}

.c8:disabled {
  background-color: #F1F2F2;
  border-color: #B7BBC2;
  color: #B7BBC2;
  cursor: not-allowed;
}

.c8:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

.c8:focus-visible {
  z-index: 3;
}

.c8 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  isolation: isolate;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
  width: auto;
}

.c7 {
  background-color: #FFFFFF;
  border-color: #CD2C23;
  box-sizing: border-box;
  color: #1B1C1E;
  font-family: inherit;
  font-size: 0.875rem;
  height: var(--size-2x);
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  outline: none;
  padding: 0 var(--spacing-1x);
  text-align: center;
  width: 3rem;
  z-index: 2;
  border-style: solid;
  border-width: 1px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  border-left: none;
  border-radius: 0;
  border-right: none;
}

.c7::-webkit-outer-spin-button,
.c7::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c7[type='number'] {
  -moz-appearance: textfield;
}

.c7:disabled {
  background-color: #F1F2F2;
  border-color: #B7BBC2;
  color: #B7BBC2;
}

.c7:-moz-read-only {
  background-color: rgb(0 0 0 / 0.03);
  border-color: transparent;
  color: #1B1C1E;
}

.c7:read-only {
  background-color: rgb(0 0 0 / 0.03);
  border-color: transparent;
  color: #1B1C1E;
}

.c7:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

<div
  class="c0"
>
  <label
    class="c1 c2"
    for="uuid1"
    id="uuid1_label"
  >
    test
  </label>
  <span
    class="c3"
    data-testid="invalid-field"
    id="uuid1_invalid"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-octagon-alert lucide-alert-octagon c4"
      fill="none"
      focusable="false"
      height="16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 16h.01"
      />
      <path
        d="M12 8v4"
      />
      <path
        d="M15.312 2a2 2 0 0 1 1.414.586l4.688 4.688A2 2 0 0 1 22 8.688v6.624a2 2 0 0 1-.586 1.414l-4.688 4.688a2 2 0 0 1-1.414.586H8.688a2 2 0 0 1-1.414-.586l-4.688-4.688A2 2 0 0 1 2 15.312V8.688a2 2 0 0 1 .586-1.414l4.688-4.688A2 2 0 0 1 8.688 2z"
      />
    </svg>
    Invalid number
  </span>
  <div
    aria-labelledby="uuid1_label"
    class="c5"
    role="group"
  >
    <button
      aria-label="Decrease number"
      class="c6"
      data-testid="stepper-button-decrement"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-minus"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
      </svg>
    </button>
    <input
      aria-invalid="true"
      class="c7"
      data-testid="stepper-input"
      id="uuid1"
      type="number"
      value=""
    />
    <button
      aria-label="Increase number"
      class="c8"
      data-testid="stepper-button-increment"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-plus"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="M12 5v14"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Stepper input matches snapshot (mobile) 1`] = `
.c2 {
  color: #1B1C1E;
  display: block;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.5rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-quarter);
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  color: #60666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 3rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: var(--spacing-1x);
  width: 3rem;
  border-radius: var(--border-radius) 0 0 var(--border-radius);
  z-index: 1;
}

.c4:hover:not(:disabled) {
  background-color: #DBDEE1;
}

.c4:disabled {
  background-color: #F1F2F2;
  border-color: #B7BBC2;
  color: #B7BBC2;
  cursor: not-allowed;
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

.c4:focus-visible {
  z-index: 3;
}

.c4 > svg {
  color: inherit;
  height: 1.25rem;
  width: 1.25rem;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  color: #60666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 3rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: var(--spacing-1x);
  width: 3rem;
  border-radius: 0 var(--border-radius) var(--border-radius) 0;
  z-index: 1;
}

.c6:hover:not(:disabled) {
  background-color: #DBDEE1;
}

.c6:disabled {
  background-color: #F1F2F2;
  border-color: #B7BBC2;
  color: #B7BBC2;
  cursor: not-allowed;
}

.c6:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

.c6:focus-visible {
  z-index: 3;
}

.c6 > svg {
  color: inherit;
  height: 1.25rem;
  width: 1.25rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  isolation: isolate;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
  width: 10rem;
}

.c5 {
  background-color: #FFFFFF;
  border-color: #60666E;
  box-sizing: border-box;
  color: #1B1C1E;
  font-family: inherit;
  font-size: 1rem;
  height: 3rem;
  -webkit-letter-spacing: 0.02875rem;
  -moz-letter-spacing: 0.02875rem;
  -ms-letter-spacing: 0.02875rem;
  letter-spacing: 0.02875rem;
  line-height: 1.5rem;
  margin: 0;
  outline: none;
  padding: 0 var(--spacing-1x);
  text-align: center;
  width: auto;
  z-index: 2;
  border-style: solid;
  border-width: 1px;
  -webkit-flex: 1 0 0;
  -ms-flex: 1 0 0;
  flex: 1 0 0;
  border-left: none;
  border-radius: 0;
  border-right: none;
}

.c5::-webkit-outer-spin-button,
.c5::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c5[type='number'] {
  -moz-appearance: textfield;
}

.c5:disabled {
  background-color: #F1F2F2;
  border-color: #B7BBC2;
  color: #B7BBC2;
}

.c5:-moz-read-only {
  background-color: rgb(0 0 0 / 0.03);
  border-color: transparent;
  color: #1B1C1E;
}

.c5:read-only {
  background-color: rgb(0 0 0 / 0.03);
  border-color: transparent;
  color: #1B1C1E;
}

.c5:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

<div
  class="c0"
>
  <label
    class="c1 c2"
    for="uuid1"
    id="uuid1_label"
  >
    test
  </label>
  <div
    aria-labelledby="uuid1_label"
    class="c3"
    role="group"
  >
    <button
      aria-label="Decrease number"
      class="c4"
      data-testid="stepper-button-decrement"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-minus"
        fill="none"
        focusable="false"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
      </svg>
    </button>
    <input
      aria-invalid="false"
      class="c5"
      data-testid="stepper-input"
      id="uuid1"
      type="number"
      value=""
    />
    <button
      aria-label="Increase number"
      class="c6"
      data-testid="stepper-button-increment"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-plus"
        fill="none"
        focusable="false"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="M12 5v14"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Stepper input matches snapshot (read-only) 1`] = `
.c2 {
  color: #1B1C1E;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.5rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-quarter);
}

.c3 {
  background-color: rgb(0 0 0 / 0.03);
  border-radius: var(--border-radius);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.c4 {
  background-color: rgb(0 0 0 / 0.03);
  border-color: transparent;
  box-sizing: border-box;
  color: #1B1C1E;
  font-family: inherit;
  font-size: 0.875rem;
  height: var(--size-2x);
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  outline: none;
  padding: 0 var(--spacing-1x);
  text-align: center;
  width: 3rem;
  z-index: 2;
  border-style: solid;
  border-width: 1px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  border-radius: var(--border-radius);
}

.c4::-webkit-outer-spin-button,
.c4::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c4[type='number'] {
  -moz-appearance: textfield;
}

.c4:disabled {
  background-color: #F1F2F2;
  border-color: #B7BBC2;
  color: #B7BBC2;
}

.c4:-moz-read-only {
  background-color: rgb(0 0 0 / 0.03);
  border-color: transparent;
  color: #1B1C1E;
}

.c4:read-only {
  background-color: rgb(0 0 0 / 0.03);
  border-color: transparent;
  color: #1B1C1E;
}

<div
  class="c0"
>
  <label
    class="c1 c2"
    for="uuid1"
    id="uuid1_label"
  >
    test
  </label>
  <div
    class="c3"
    data-testid="stepper-input-readonly"
  >
    <input
      aria-invalid="false"
      class="c4"
      data-testid="stepper-input"
      id="uuid1"
      readonly=""
      type="number"
      value="3"
    />
  </div>
</div>
`;

exports[`Stepper input matches snapshot 1`] = `
.c2 {
  color: #1B1C1E;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.5rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-quarter);
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  color: #60666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-2x);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: var(--spacing-1x);
  width: var(--size-2x);
  border-radius: var(--border-radius) 0 0 var(--border-radius);
  z-index: 1;
}

.c4:hover:not(:disabled) {
  background-color: #DBDEE1;
}

.c4:disabled {
  background-color: #F1F2F2;
  border-color: #B7BBC2;
  color: #B7BBC2;
  cursor: not-allowed;
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

.c4:focus-visible {
  z-index: 3;
}

.c4 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  color: #60666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-2x);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: var(--spacing-1x);
  width: var(--size-2x);
  border-radius: 0 var(--border-radius) var(--border-radius) 0;
  z-index: 1;
}

.c6:hover:not(:disabled) {
  background-color: #DBDEE1;
}

.c6:disabled {
  background-color: #F1F2F2;
  border-color: #B7BBC2;
  color: #B7BBC2;
  cursor: not-allowed;
}

.c6:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

.c6:focus-visible {
  z-index: 3;
}

.c6 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  isolation: isolate;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
  width: auto;
}

.c5 {
  background-color: #FFFFFF;
  border-color: #60666E;
  box-sizing: border-box;
  color: #1B1C1E;
  font-family: inherit;
  font-size: 0.875rem;
  height: var(--size-2x);
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  outline: none;
  padding: 0 var(--spacing-1x);
  text-align: center;
  width: 3rem;
  z-index: 2;
  border-style: solid;
  border-width: 1px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  border-left: none;
  border-radius: 0;
  border-right: none;
}

.c5::-webkit-outer-spin-button,
.c5::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c5[type='number'] {
  -moz-appearance: textfield;
}

.c5:disabled {
  background-color: #F1F2F2;
  border-color: #B7BBC2;
  color: #B7BBC2;
}

.c5:-moz-read-only {
  background-color: rgb(0 0 0 / 0.03);
  border-color: transparent;
  color: #1B1C1E;
}

.c5:read-only {
  background-color: rgb(0 0 0 / 0.03);
  border-color: transparent;
  color: #1B1C1E;
}

.c5:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

<div
  class="c0"
>
  <label
    class="c1 c2"
    for="uuid1"
    id="uuid1_label"
  >
    test
  </label>
  <div
    aria-labelledby="uuid1_label"
    class="c3"
    role="group"
  >
    <button
      aria-label="Decrease number"
      class="c4"
      data-testid="stepper-button-decrement"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-minus"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
      </svg>
    </button>
    <input
      aria-invalid="false"
      class="c5"
      data-testid="stepper-input"
      id="uuid1"
      type="number"
      value=""
    />
    <button
      aria-label="Increase number"
      class="c6"
      data-testid="stepper-button-increment"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-plus"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="M12 5v14"
        />
      </svg>
    </button>
  </div>
</div>
`;
